# SimpleOverride

./: .gitmodules  CMakeLists.txt  Example.cpp  FunctionOverrides.hpp  README.md  SimpleOverride.hpp
Include_MultiHeaders/: AliasTypes.hpp  ArgsInfo.hpp  Internal_ActionInfo.hpp  Internal_ArgsChecker.hpp  Internal_ArgsData.hpp  Internal_ArgsDataRetriever.hpp  Internal_ArgsDataSetter.hpp  Internal_ArgsModifier.hpp  Internal_ArgsTypeInfoAppender.hpp  Internal_ArgsTypesChecker.hpp  Internal_ArgsValuesAppender.hpp  Internal_ArgsValuesChecker.hpp  Internal_ArgumentDataSetter.hpp  Internal_ArgumentsData.hpp  Internal_ConditionInfo.hpp  Internal_DataInfo.hpp  Internal_OverrideArgumentInfo.hpp  Internal_OverrideReturnDataInfo.hpp  Internal_RequirementSetter.hpp  Internal_ReturnData.hpp  Internal_ReturnDataRetriever.hpp  Internal_ReturnDataSetter.hpp  Macros.hpp  NonComparable.hpp  NonComparableCopyable.hpp  NonCopyable.hpp  ProxiesDeclarations.hpp  ProxiesImplementations.hpp  PureType.hpp  SimpleOverride.hpp  SimpleOverrideInstance.hpp
Include_SingleHeader/: SimpleOverride.hpp
Tests/: ClassFunctions.hpp  ClassFunctionsTests.hpp  FileFunctions.hpp  FileFunctionsTests.hpp  FunctionOverridesTests.cpp  ModifyArgsTests.cpp  ModifyReturnsTests.cpp  SimpleOverrideTests.cpp  WhenCalledWithTests.cpp
Tests/Components/: ComplexArg.hpp  DummyClass.hpp
